# conexgram

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.json  gateway.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
conexgram/: __init__.py  agents.py  app.py  audio_transcription.py  cli.py  codex_index.py  codex_runner.py  commands.py  config.py  message_format.py  onboarding.py  paths.py  progress.py  service.py  session_store.py  setup_wizard.py  stt.py  stt_worker.py  telegram_api.py  terminal_shell.py
docs/: curl-install.md  demo-script.md  demo.md  landing-page-copy.md  launch-kit.md  pypi-release.md  security.md  troubleshooting.md
launchagent/: com.alday.conexgram.plist.example
public/: install.sh
scripts/: install.sh  install_launch_agent.sh  install_linux_systemd.sh  install_windows.ps1  pip_install_and_service.sh
tests/: test_app.py  test_codex_runner.py  test_commands.py  test_config.py  test_message_format.py  test_onboarding.py  test_paths.py  test_progress.py  test_service.py  test_session_store.py  test_telegram_api.py  test_terminal_shell.py
